pkg/cmd/kustomize/test_data/target/myapp/deployment.yaml
# Source: myapp/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myapp-myapp
  namespace: myapps
  annotations:
    wave.pusher.com/update-on-config-change: "true"
  labels:
    draft: draft-app
    chart: "myapp-1.0.5"
    newlabel: cheese
spec:
  selector:
    matchLabels:
      app: myapp-myapp
  replicas: 3
  template:
    metadata:
      labels:
        draft: draft-app
        app: myapp-myapp
    spec:
      containers:
      - name: myapp
        image: "gcr.io/myproject/myapp:1.0.5"
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
        livenessProbe:
          httpGet:
            path: /
            port: 8080
          initialDelaySeconds: 60
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
        readinessProbe:
          httpGet:
            path: /
            port: 8080
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
        resources:
          limits:
            cpu: 400m
            memory: 256Mi
          requests:
            cpu: 200m
            memory: 128Mi
      terminationGracePeriodSeconds:
